
    o	data.matrix() was documented to replace factors by their
	codes, but in fact re-coded into the alphabetical ordering of
	the levels.

    o	decompose() with even frequency used an asymmetric moving
	average window.

    o	demo() was using `topic' as a regexp rather than an exact match.

    o	dotchart() now does recycle the `color' argument and better
	documents the `bg' one (PR#4343).

    o	file.copy() ignored the overwrite argument.  (PR#3529)

    o	filter(method="recursive") was unnecessarily requiring the
	time series to be longer than the filter.

    o	format(*, nsmall = m) with m > 0 now returns exponential format
	less often.

    o	get() and exists() were ignoring the `mode' argument for
	variables in base.  The error message for get() now mentions
	the mode requested if not "any".  A bug in setting the NAMED
	field in do_get was fixed.

    o	getS3method(f, cl, optional=TRUE) now returns NULL if `f' does
	not exist.

    o	HoltWinters() would segfault if only gamma was optimized, and
	not converge if gamma=0 and seasonal="mult".

    o	hyperref.cfg now contains definitions for colors it uses.

    o	identify.default() detects zero-length arguments.  (PR#4057)

    o	legend() allows shading without filling again.

    o	legend(x, y, leg) doesn't triple `leg' anymore when it is a call.

    o	Corrected many problems with 0-rank (but not necessarily empty
	model) lm() and glm() fits.

    o	lm.influence() now handles 0-rank models, and names its output
	appropriately.	It also ensures that hat values are not greater
	than one, and rounds values within rounding error of one.

    o	The `method' argument to loess() did not work.	(PR#3332)

    o	lsfit() was returning incorrect residuals for 0-rank fits.

    o	methods("$") and methods("$<-") were failing to find methods.

    o	methods() and getS3method() find methods if the generic
	dispatches on a name other than its own.  (The cases of
	coefficients() and fitted.values() were fixed in 1.7.1.)
